# TaskForge

./: .gitignore  Agents.py  README.md  TodoManager.py  api.py  compression.py  config.example.yaml  docker-compose.yml  email_send.py  errors.py  main.py  mcp_config.json  memory.py  pyproject.toml  requirements.txt  security_checker.py  skill_loader.py  skills-lock.json  take_ss.py  user_state.py
.agents/skills/spark-maintenance/: SKILL.md
.agents/skills/taskforge-maintenance/: SKILL.md
.agents/skills/taskforge-maintenance/agents/: openai.yaml
.claude/: settings.local.json
api/: __init__.py  app.py  deps.py  schemas.py
api/routers/: auth.py  chat.py  general.py  mcp.py  memories.py  sessions.py  workspaces.py
docs/: project-structure.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ChatWindow.tsx  ConfigModal.tsx  ConfigPanel.tsx  FilePanel.tsx  InputBar.tsx  LoginModal.tsx  MCPModal.tsx  MemoryPanel.tsx  MessageItem.tsx  MessageList.tsx  PromptModal.tsx  SessionList.tsx  Sidebar.tsx
frontend/src/hooks/: useAuth.ts  useChat.ts
spark/: __init__.py  cli.py  config.py
spark/core/: agents.py  compression.py
spark/integrations/: mcp_manager.py
spark/security/: checker.py
spark/services/: memory.py  user_state.py
spark/skills/: loader.py
taskforge/: __init__.py  cli.py  config.py
taskforge/core/: agents.py  compression.py
taskforge/security/: checker.py
taskforge/services/: auth.py  memory.py  user_state.py  workspaces.py
taskforge/skills/: __init__.py  loader.py
tests/: conftest.py  test_security.py  test_todo.py  test_tools.py  test_workspaces.py
tools/: __init__.py  base.py  builtin.py  websearch.py
