[project]
name = "pycode-agent"
version = "3.0.0"
description = "AI-powered coding agent with tools framework and skills"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "QuWan"}
]
keywords = ["ai", "agent", "coding", "assistant"]

dependencies = [
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.6",
    "python-docx>=0.8.11",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "sse-starlette>=1.6.1",
    "mem0ai>=0.1.0",
    "qdrant-client>=1.9.0",
    "mcp>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
json-logging = [
    "python-json-logger>=2.0.0",
]

[project.scripts]
pycode-agent = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=. --cov-report=term-missing"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
explicit_package_bases = true
no_site_packages = true
exclude = [
    "^\\.venv/",
    "^frontend/",
    "^skills/",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
